sunuo (0.3.2) unstable; urgency=low

  * implemented a main loop profiler
  * refuse to load objects with serial -1
  * transactional world save
  * non-interactive world repair
  * reserve 10% space in mobile/item hash tables
  * script debugging is always enabled
  * explicit TileData initialization
  * added Config.Network
    - configure Listeners
  * Listener.Slice() returns null when idle
  * login: optionally limit the number of account creations per IP (patch
    from Patrick Reinhardt)
  * added legacy scripts
    - use log4net for logging
    - removed Address from ServerList
    - default to server list from Config.GameServerListConfig
    - get server name from Config.ServerName
    - make backup path portable
    - display "SunUO" in UOGInfo packet
    - use Config.ConfigDirectory, Config.BackupDirectory
    - don't read data-path from stdin
    - removed DataPath.CustomPath
    - don't try to dns-resolve hostname, just use LocalEndPoint
    - test center switch is feature "test-center"
    - launch www.sunuo.org instead of www.runuo.com
    - disambiguate Math.Floor() call
    - fixed compiler warnings
    - Multis.MovingCrate: check ReadItem() result
    - initialize BaseCreature.m_arSpellAttack and m_arSpellDefense on demand
    - don't allocate an empty array for empty book pages
    - create on demand:
      - PlayerMobile.m_VisList
      - PlayerMobile.m_PermaFlags
      - PlayerMobile.m_JusticeProtectors
      - PlayerMobile.m_AntiMacroTable
      - PlayerMobile.m_Aggressors
      - PlayerMobile.m_Aggressed
      - BaseCreature.m_Owners
      - GenericBuyInfo.Name
      - GenericBuyInfo.DisplayCache.m_Table
      - GenericBuyInfo.DisplayCache.m_Mobiles
      - GenericSellInfo.m_Table
      - BaseWeapon: m_AosAttributes, m_AosWeaponAttributes
      - BaseArmor: m_AosAttributes, m_AosArmorAttributes, m_AosSkillBonuses
      - BaseClothing: m_AosAttributes, m_AosClothingAttributes,
        m_AosSkillBonuses, m_AosResistances